
  * Removed old methods and classes that were marked deprecated in previous releases.

**** Release 1.12.2 [2020-Feb-08]
  * Improvement: the :has() selector now supports relative selectors. For example, the query
    "div:has(> a)" will select all "div" elements that have at least one direct child "a" element.
    <https://github.com/jhy/jsoup/pull/1214>

  * Improvement: added Element chaining methods for various overridden methods on Node.
    <https://github.com/jhy/jsoup/issues/1193>

  * Improvement: ensure HTTP keepalives work when fetching content via body() and bodyAsBytes().
    <https://github.com/jhy/jsoup/issues/1232>

  * Improvement: set the default max body size in Jsoup.Connection to 2MB (up from 1MB) so fewer people get trimmed
    content if they have not set it, but still in sensible bounds. Also updated the default user-agent to improve
    default compatibility.

  * Improvement: dramatic speed improvement when bulk inserting child nodes into an element (wrapping contents).
    <https://github.com/jhy/jsoup/issues/1281>

  * Improvement: added Element#childrenSize() as a convenience to get the size of an element's element children.
    <https://github.com/jhy/jsoup/pull/1291>

  * Improvement: in W3CDom.asString, allow the output mode to be specified as HTML or as XML. It will default to
    checking the content, and automatically selecting.

  * Improvement: added a Document#documentType() method, to get a doc's doctype.

  * Improvement: To DocumentType, added #name(), #publicID(), and #systemId() methods to fetch those fields.

  * Improvement: in W3CDom conversions from jsoup documents, retain the DocumentType, and be able to serialize it.
    <https://github.com/jhy/jsoup/issues/1183>

  * Bugfix: on pages fetch by Jsoup.Connection, a "Mark Invalid" exception might be incorrectly thrown, or the page may
    miss some data. This occurred on larger pages when the file transfer was chunked, and an invalid HTML entity